# rse-course

./: .gitignore  .travis.yml  LICENSE.md  Makefile  README.md  _config.yml  _toc.yml  attendee-info.md  build_docs.sh  dates.md  environment.yml  index.html  index.md  intro.md  jekyll.tpl  latex.tplx  nbmerge.py  pyproject.toml  requirements.txt  secrets.tar.enc
.doctrees/: environment.pickle  index.doctree
ati_css/: style-min.css  style.css
ch00python/: 00pythons.html  00pythons.ipynb  010exemplar.html  010exemplar.ipynb  015variables.html  015variables.ipynb  016using_functions.html  016using_functions.ipynb  023types.html  023types.ipynb  025containers.html  025containers.ipynb  028dictionaries.html  028dictionaries.ipynb  029structures.html  029structures.ipynb  030MazeSolution.html  030MazeSolution.ipynb  032conditionality.html  032conditionality.ipynb  035looping.html  035looping.ipynb  036MazeSolution2.html  036MazeSolution2.ipynb  037comprehensions.html  037comprehensions.ipynb  038SolutionComprehension.html  038SolutionComprehension.ipynb  040functions.html  040functions.ipynb  04functions.html  04functions.ipynb  050import.html  050import.ipynb  101Classes.html  101Classes.ipynb  draw_eight.py  fourteen.py  index.html  index.md
ch01data/: 060files.html  060files.ipynb  061internet.html  061internet.ipynb  062csv.html  062csv.ipynb  064JsonYamlXML.html  064JsonYamlXML.ipynb  065MazeSaved.html  065MazeSaved.ipynb  066QuakeExercise.html  066QuakeExercise.ipynb  068QuakesSolution.html  068QuakesSolution.ipynb  072plotting.html  072plotting.ipynb  082NumPy.html  082NumPy.ipynb  110Capstone.html  110Capstone.ipynb  index.html  index.md  maze.yaml  mydata.txt  myfile.json  myfile.yaml  mywrittenfile
ch02git/: 01Intro.html  01Intro.ipynb  02Solo.html  02Solo.ipynb  03Mistakes.html  03Mistakes.ipynb  04Publishing.html  04Publishing.ipynb  05Collaboration.html  05Collaboration.ipynb  06ForkAndPull.html  06ForkAndPull.ipynb  09GitTheory.html  09GitTheory.ipynb  10Branches.html  10Branches.ipynb  11Miscellany.html  11Miscellany.ipynb  12Remotes.html  12Remotes.ipynb  13Rebase.html  13Rebase.ipynb  14Bisect.html  14Bisect.ipynb  index.html  index.md  somefile.md  wsd.py
module06_software_projects/Greetings/: CITATION.md  LICENSE.md  README.md  pyproject.toml
module06_software_projects/Greetings/Greetings.egg-info/: PKG-INFO  entry_points.txt
module06_software_projects/Greetings/docs/: conf.py
module06_software_projects/Greetings/greetings/: command.py  greeter.py
module06_software_projects/Greetings/tests/: test_greeter.py
(+1747 files in other folders)
