[tool.poetry]
name = "rse-course"
version = "0.1.0"
description = ""
authors = ["Poetry User <fake@example.com>"]
readme = "README.md"
packages = [{include = "rse_course"}]

[tool.poetry.dependencies]
python = "^3.8"
art = "^5.7"
black = "^22.10.0"
colorama = "^0.4.5"
Cython = "^0.29.32"
flake8 = "^5.0.4"
geopy = "^2.2.0"
h5py = "^3.7.0"
imageio = "^2.22.1"
ipython = "^8.5.0"
isort = "^5.10.1"
jupyter-book = "^0.13.1"
line-profiler = "^3.5.1"
lxml = "^4.9.1"
mako = "^1.2.3"
matplotlib = "^3.6.1"
mypy = "^0.982"
nbqa = "^1.5.2"
numba = "^0.56.2"
numpy = "^1.23.3"
numpydoc = "^1.5.0"
pandas = "^1.5.0"
ply = "^3.11"
pycodestyle = "^2.9.1"
pylama = "^8.4.1"
pylint = "^2.15.4"
pyppeteer = "^1.0.2"
pytest = "^7.1.3"
pytest-cov = "^4.0.0"
pyyaml = "^6.0"
rdflib = "^6.2.0"
requests = "^2.28.1"
scikit-learn = "^1.1.2"
scipy = "^1.9.2"
sqlalchemy = "^1.4.41"
webcolors = "^1.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"