[tool.poetry]
name = "rse-course"
version = "0.1.0"
description = ""
authors = ["Poetry User <fake@example.com>"]
readme = "README.md"
packages = [{include = "rse_course"}]

[tool.poetry.dependencies]
python = "^3.8"
art = "^5.7"
black = "^22.10.0"
bokeh = "^2.1.1"
colorama = "^0.4.0"
Cython = "^0.29.0"
dask = {extras = ["distributed"], version = "^2022.10.0"}
flake8 = "^5.0.0"
geopy = "^2.2.0"
h5py = "^3.7.0"
imageio = "^2.22.0"
ipython = "^8.5.0"
isort = "^5.10.0"
jupyter-book = "^0.13.0"
line-profiler = "^3.5.0"
lxml = "^4.9.0"
mako = "^1.2.0"
matplotlib = "^3.6.0"
mypy = "^0.982"
nbqa = "^1.5.0"
netcdf4="^1.6.1"
numba = "^0.56.0"
numpy = "^1.23.0"
numpydoc = "^1.5.0"
pandas = "^1.5.0"
parquet="^1.3.0"
ply = "^3.11"
pyarrow="^10.0.0"
pycodestyle = "^2.9.0"
pylama = "^8.4.0"
pylint = "^2.15.0"
pyppeteer = "^1.0.0"
pytest = "^7.1.0"
pytest-cov = "^4.0.0"
pyyaml = "^6.0"
rdflib = "^6.2.0"
requests = "^2.28.0"
rinohtype = "^0.5.0"
scikit-learn = "^1.1.0"
scipy = "^1.9.0"
sqlalchemy = "^1.4.0"
webcolors = "^1.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"